# setup.cfg file at the root directory
[metadata]
name = neodata_pu
version = 1.0.1
author = Armando Aguilar L.
description = neodata pu precios unitarios presupuestos neodata
long_description = file:README.MD
url = https://armando_aguilar.com
keywords = neodata pu precios unitarios presupuestos neodata
[options]
python_requires = >=3.7